--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Gratia</title>
-  <link rel="stylesheet" href="css.style.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <header class="page-header">
+  <header class="page-header page-header--index">
     <nav class="main-nav page-header__nav">
-      <div class="page-header__logo">
-        <img src="" alt="Logotype">
-        <span class="page-header__name">Gratia</span>
+      <div class="main-nav__logo">
+        <div class="main-nav__image">
+          <img src="" alt="Logotype" width="34" height="34">
+        </div>
+        <span class="main-nav__name">Gratia</span>
       </div>
-      <ul class="site-list page-header__list">
+      <ul class="site-list main-nav__list">
         <li class="site-list__item">
           <a href="#" class="site-list__link">About</a>
         </li>
@@ -28,11 +30,11 @@
       </ul>
     </nav>
     <div class="promo page-header__promo">
-      <b class="promo__text">Details</b>
-      <b class="promo__text promo__text--big"><span>Ma</span>ke</b>
-      <b class="promo__text">Perfection</b>
+      <b class="promo__text">Details</b><br>
+      <b class="promo__text promo__text--big"><span>Ma</span>ke</b><br>
+      <b class="promo__text">Perfection</b><br>
       <span class="promo__pointer">and perfection is  not a detail</span>
-      <a href="#" class="promo__button">Book a table</a>
+      <a href="#" class="button promo__button">Book a table</a>
     </div>
   </header>
   <main class="page-main">
